fixing uneven spacing between left and right side cards of skills section

--- a/css/main.css
+++ b/css/main.css
@@ -247,7 +247,7 @@ footer{
 @media screen and (min-width: 670px){
 
   #skills{
-    padding-left: 25px;
+    padding-left: 30px;
   }
 
 
